[tool.poetry]
name = "surface_temperatures"
version = "0.1.0"
description = ""
authors = ["kylepollina <kyle.pollina@datacubes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "pandas"
pandas = "^1.0.1"
altair = "^4.0.1"
jupyterlab = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
